--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<h1 class="bg-primary">Welcome to One Conversion</h1>
-
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h2 >I am the app component</h2>
+            <hr>
+            <app-servers></app-servers>
+            <hr>
+            <app-success></app-success>
+            <hr>
+            <app-warning></app-warning>
+        </div>
+    </div>
+</div>
